# analysis_pension_ceilings

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/analysis_pension_ceilings/: __init__.py  __main__.py  app.py  blocks.py  cli.py  download.py  process.py
src/analysis_pension_ceilings/process/node/: clean.py  preprocess.py
src/analysis_pension_ceilings/process/pipeline/: clean.py  postprocess.py  preprocess.py
