[project]
name = "analysis-pension-ceilings"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Athroniaeth", email = "pierre.chaumont@hotmail.fr" }
]
dependencies = [
    "typer>=0.12.5",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.32.0",
    "fastapi>=0.115.4",
    "gradio>=5.5.0",
    "matplotlib>=3.9.2",
    "polars>=1.12.0",
    "fastexcel>=0.12.0",
    "pandera[polars]>=0.20.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/analysis_pension_ceilings"]
